# vulnadvisor

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Claude.md  Dockerfile  NOTICE  PROGRESS.md  README.md  SECURITY.md  fly.toml  package-lock.json  package.json  pyproject.toml  render.yaml  task.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_negative.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: REPORT.live.md  REPORT.md  SAST-REPORT.md  __init__.py  __main__.py  corpus.py  fusion_corpus.py  fusion_metrics.py  manifest.py  metrics.py  report.py  sast_corpus.py  sast_metrics.py  sast_perf.py  sast_report.py
dashboard/: .env.example  README.md  next.config.ts  package-lock.json  package.json
dashboard/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
dashboard/app/activate/: activate-form.tsx  page.tsx
dashboard/app/demo/: demo-tour-button.tsx  layout.tsx  page.tsx
dashboard/app/setup/: loading.tsx  page.tsx  repo-setup-row.tsx
dashboard/components/: analytics-charts.tsx  blocks.tsx  finding-card.tsx  nav.tsx  posture-hero.tsx  setup-chip.tsx  trend-chart.tsx  ui.tsx
dashboard/components/copilot/: byom-config.tsx  copilot-panel.tsx
dashboard/components/shell/: app-shell.tsx  brand.tsx  command-palette.tsx  palette-context.tsx  shell-slots.tsx  sidebar.tsx  tour-context.tsx
dashboard/components/tour/: product-tour.tsx
dashboard/components/ui/: sheet.tsx
dashboard/lib/: api.ts  byom.test.ts  byom.ts  copilot-ui.test.ts  copilot-ui.ts  copilot.test.ts  copilot.ts  demo-data.ts  demo.test.ts  finding.test.ts  fix.test.ts  fix.ts  format.ts  motion.ts  posture.test.ts  posture.ts  setup.test.ts  setup.ts  shell-data.ts  tour.test.ts  tour.ts  types.ts
dashboard/scripts/: copilot-redteam.ts
dashboard/scripts/redteam-snapshots/: 01-all-clear.md  02-priority-override.md  03-prompt-exfil.md  04-fake-marker-escape.md
docs/: RELEASE.md  deploy.md  fix-gap-trace.md  fusion-design.md  hn-post.md  incremental-design.md  launch-post.md  m12-strategy.md  platform-design.md  reddit-post.md  release-checklist.md  release-notes-v1.0.3.md  sast-design.md  task-m0-m11-archive.md
examples/quickstart/: app.py  requirements.txt
fixtures/api/: epss.json  kev.json  osv_jinja2.json
fixtures/manifests/: pyproject_pep621.toml  pyproject_poetry.toml  requirements.txt
fixtures/patches/: flask_cve_2023_30861.patch  jinja2_cve_2019_10906.patch  pyyaml_cve_2020_14343.patch  requests_cve_2018_18074.patch  urllib3_cve_2021_33503.patch
fixtures/projects/django_app/: requirements.txt  urls.py  views.py
fixtures/projects/fastapi_app/: app.py  requirements.txt
fixtures/projects/reach_called/: app.py
fixtures/projects/reach_dynamic/: app.py
fixtures/projects/reach_dynamic_dispatch/: app.py
fixtures/projects/reach_dynamic_resolved_safe/: app.py
fixtures/projects/reach_dynamic_resolved_vuln/: app.py
fixtures/projects/reach_imported/: app.py
fixtures/projects/reach_imported_only/: app.py
fixtures/projects/reach_not_imported/: app.py
fixtures/projects/taint_django/: urls.py  views.py
fixtures/projects/taint_mixed/: app.py
fixtures/projects/taint_object/: models.py  urls.py  views.py
fixtures/projects/taint_xmodule/: deeper.py  entry.py  helpers.py  safe.py  service.py
fixtures/snapshots/: cards.txt  mixed_ranking.json  report.json
platform/: .env.example  alembic.ini  docker-compose.yml
platform/tests/: _helpers.py  conftest.py  test_analytics.py  test_auth.py  test_compact.py  test_copilot.py  test_device.py  test_fix_gap.py  test_github.py  test_github_secrets.py  test_health.py  test_ingest.py  test_keys.py  test_llm.py  test_me_auth.py  test_models.py  test_pr_suggestion.py  test_read.py  test_scans_upload.py  test_setup_pr.py
platform/vulnadvisor_platform/: __init__.py  access.py  analytics.py  app.py  compact.py  config.py  copilot.py  db.py  github_app.py  github_oauth.py  github_secrets.py  models.py  pr_comment.py  pr_suggestion.py  reports.py  schemas.py  security.py  sessions.py  setup_pr.py  trends.py  webhooks.py
platform/vulnadvisor_platform/alembic/: env.py
platform/vulnadvisor_platform/routers/: __init__.py  analytics.py  auth.py  copilot.py  device.py  github.py  ingest.py  keys.py  llm.py  read.py
src/vulnadvisor/: __init__.py
src/vulnadvisor/advisories/: __init__.py  clients.py  matcher.py  parsing.py  transport.py
src/vulnadvisor/callgraph/: __init__.py  call_paths.py  import_graph.py  public_api.py  type_resolver.py
src/vulnadvisor/cli/: __init__.py  main.py  pipeline.py  render.py
src/vulnadvisor/coverage/: __init__.py  overlay.py  parse.py
src/vulnadvisor/engine/: __init__.py  cvss.py  safe_fix.py  sast_scoring.py  scoring.py
src/vulnadvisor/llm/: __init__.py  client.py  explainer.py  fix.py  fix_validate.py  prompt.py  proxy.py  quickfix.py  suggest.py
src/vulnadvisor/mcp/: __init__.py  server.py  session.py  state.py  tools.py
src/vulnadvisor/model/: __init__.py  advisory.py  callpath.py  dependency.py  display.py  explanation.py  fix.py  import_mapping.py  imports.py  reachability.py  runtime.py  safe_fix.py  score.py  suggestion.py  symbols.py
src/vulnadvisor/output/: __init__.py  gating.py  (+9 more)
tests/: conftest.py  test_advisories.py  test_analysis_cache.py  test_backfill.py  test_benchmarks.py  test_call_paths.py  test_cli.py  test_coverage_overlay.py  test_credentials.py  test_dataset.py  test_deps_parsers.py  test_devicelogin.py  test_display.py  test_engine_scoring.py  test_file_facts_cache.py  test_fix.py  test_fix_gap.py  test_frameworks.py  test_fusion.py  test_fusion_benchmark.py  test_fusion_integration.py  test_github_pr.py  test_gitmeta.py  test_import_graph.py  test_import_mapping.py  test_llm.py  test_mcp_server.py  test_mcp_tools.py  test_output.py  test_package.py  test_pipeline.py  test_proxy.py  test_public_api_callpaths.py  test_quickfix.py  test_reachability.py  test_render.py  test_safe_fix.py  test_sast_benchmark.py  test_sast_cwe_families.py  test_sast_scoring.py  (+7 more)
(+59 files in other folders)
