# File: pyproject.toml
[project]
name = "vulnadvisor"
version = "1.0.0"
description = "The best reachability engine for Python: tells you which dependency vulnerabilities are actually reachable from your own code."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "VulnAdvisor contributors" }]
keywords = ["security", "vulnerability", "reachability", "python", "sca", "sast", "triage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "packaging==26.2",
    "pydantic==2.13.4",
    "typer==0.26.7",
]

[project.scripts]
vulnadvisor = "vulnadvisor.cli.main:app"

[project.urls]
Homepage = "https://github.com/Parthav99/vulnadvisor_v2"
Repository = "https://github.com/Parthav99/vulnadvisor_v2"
Issues = "https://github.com/Parthav99/vulnadvisor_v2/issues"
Changelog = "https://github.com/Parthav99/vulnadvisor_v2/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff==0.14.4",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "jsonschema==4.26.0",
    "pip-audit==2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulnadvisor"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Fixtures are deliberate test inputs (odd import order, intentional syntax errors, etc.).
extend-exclude = ["fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
