# File: pyproject.toml
[project]
name = "vulnadvisor"
version = "1.0.5"
description = "The best reachability engine for Python: tells you which dependency vulnerabilities are actually reachable from your own code."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "VulnAdvisor contributors" }]
keywords = ["security", "vulnerability", "reachability", "python", "sca", "sast", "triage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "packaging==26.2",
    "pydantic==2.13.4",
    "typer==0.26.7",
]

[project.scripts]
vulnadvisor = "vulnadvisor.cli.main:app"

[project.urls]
Homepage = "https://github.com/Parthav99/vulnadvisor"
Repository = "https://github.com/Parthav99/vulnadvisor"
Issues = "https://github.com/Parthav99/vulnadvisor/issues"
Changelog = "https://github.com/Parthav99/vulnadvisor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = [
    "mcp==1.27.2",
]

[dependency-groups]
dev = [
    "ruff==0.14.4",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "jsonschema==4.26.0",
    "pip-audit==2.10.0",
    "pyyaml==6.0.3",
    # Mirror of the user-facing `[mcp]` extra (same pin) so a default `uv sync` gives contributors
    # an env where `uv run mypy/pytest` can type-check and exercise the MCP server. Dev groups never
    # ship in the wheel, and the extra (not this) is what end users install via `vulnadvisor[mcp]`.
    "mcp==1.27.2",
    "bandit==1.8.6",
]
platform = [
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "cryptography==48.0.1",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pydantic-settings==2.14.1",
    "pyjwt==2.13.0",
    "pynacl==1.5.0",
    "pytest-asyncio==1.4.0",
    "sqlalchemy[asyncio]==2.0.50",
    "uvicorn==0.49.0",
]

# Sync both dev groups by default for contributors. Groups never ship in the built wheel, so the
# published `vulnadvisor` distribution stays lean (packaging + pydantic + typer only).
[tool.uv]
default-groups = ["dev", "platform"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulnadvisor"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "platform"]
# Fixtures are deliberate test inputs (odd import order, intentional syntax errors, etc.).
extend-exclude = ["fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"platform/tests/*" = ["D"]
# Alembic-generated migration scripts and env follow their own conventions (deferred imports
# after sys.path setup, no docstrings, long generated lines).
"platform/vulnadvisor_platform/alembic/*" = ["D", "E501", "E402", "I001", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "platform"]
# Alembic env + generated migrations are not strict-clean by nature; tests aren't type-checked
# (matching the core, which type-checks src only).
exclude = ["platform/vulnadvisor_platform/alembic/", "platform/tests/"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests", "platform/tests"]
pythonpath = ["platform"]
asyncio_mode = "auto"
